# binhook

./: .gitattributes  .gitignore  .gitmodules  README.md
src/: app.c  func.c  hook.c  repl.c
tests/: testenv
tests/dr/: CMakeLists.txt  client.c  docker.sh  test.sh
tests/elf_hook/: test.sh  testA.c  testB.c  testC.c  testD.c  wrapfunc.c
tests/elf_hook/mwe/: app.c  hook.c  libfunc.c  test.sh  testA.c  testB.c  testC.c  testD.c
tests/ld_preload/: test.sh
tests/mambo/: mambo_plugin.c
